// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown heading 1`] = `
<div>
  <div
    class="typeset tailchat-markdown min-h-6 select-text [&_*]:select-text"
  >
    <h1>
      Heading1
    </h1>
    

    <h2>
      Heading2
    </h2>
    

    <h3>
      Heading3
    </h3>
    

    <h4>
      Heading4
    </h4>
    

    <h5>
      Heading5
    </h5>
  </div>
</div>
`;

exports[`Markdown link with baseUrl 1`] = `
<div>
  <div
    class="typeset tailchat-markdown min-h-6 select-text [&_*]:select-text"
  >
    <p>
      <a
        href="https://tailchat.msgbyte.com/"
        target="_blank"
      >
        https://tailchat.msgbyte.com/
      </a>
      

      <a
        href="https://tailchat.msgbyte.com/README.md"
        target="_blank"
      >
        ./README.md
      </a>
      

      <span
        style="display: inline-block;"
      >
        <img
          alt=""
          class="max-w-full rounded-lg border border-border"
          loading="lazy"
          src="https://tailchat.msgbyte.com/demo.jpg"
        />
      </span>
    </p>
  </div>
</div>
`;

exports[`Markdown link without baseUrl 1`] = `
<div>
  <div
    class="typeset tailchat-markdown min-h-6 select-text [&_*]:select-text"
  >
    <p>
      <a
        href="https://tailchat.msgbyte.com/"
        target="_blank"
      >
        https://tailchat.msgbyte.com/
      </a>
      

      <a
        href="./README.md"
        target="_blank"
      >
        ./README.md
      </a>
      

      <span
        style="display: inline-block;"
      >
        <img
          alt=""
          class="max-w-full rounded-lg border border-border"
          loading="lazy"
          src="./demo.jpg"
        />
      </span>
    </p>
  </div>
</div>
`;

exports[`Markdown list 1`] = `
<div>
  <div
    class="typeset tailchat-markdown min-h-6 select-text [&_*]:select-text"
  >
    <ul>
      

      <li>
        1
      </li>
      

      <li>
        2
      </li>
      

      <li>
        3

        <ul>
          

          <li>
            4
          </li>
          

          <li>
            5

            <ul>
              

              <li>
                6
              </li>
              

            </ul>
            

          </li>
          

        </ul>
        

      </li>
      

    </ul>
  </div>
</div>
`;

exports[`Markdown table 1`] = `
<div>
  <div
    class="typeset tailchat-markdown min-h-6 select-text [&_*]:select-text"
  >
    

















    <table>
      <thead>
        <tr>
          <th>
            A
          </th>
          <th>
            B
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            1
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            3
          </td>
          <td>
            4
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
